--- a/UdbService/Areas/Admin/Views/Category/Index.cshtml
+++ b/UdbService/Areas/Admin/Views/Category/Index.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<UdbService.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-8">
+        <h1 class="text-info">Categories</h1>
+    </div>
+    <div class="col-4">
+        <p>
+            <a class="btn btn-primary" asp-action="Create"><i class="fa fa-plus"></i>&nbsp; Create a new category</a>
+        </p>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -26,9 +32,9 @@
             </td>
             <td>
 
-                <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>&nbsp;
-                <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info"></i></a> &nbsp;
-                <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i></a>&nbsp;
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary"><i class="fas fa-edit"></i></a>&nbsp;
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><i class="fas fa-info"></i></a> &nbsp;
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fas fa-trash"></i></a>&nbsp;
             </td>
         </tr>
 }
