--- a/UdbService/Areas/Admin/Views/Services/Index.cshtml
+++ b/UdbService/Areas/Admin/Views/Services/Index.cshtml
@@ -1,14 +1,22 @@
 ﻿@model IEnumerable<UdbService.Models.Service>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Services";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-8">
+        <h1 class="text-info">Services</h1>
+    </div>
+    <div class="col-4">
+        <p>
+            <a class="btn btn-primary" asp-action="Create"><i class="fa fa-plus"></i>&nbsp; Create a new service</a>
+        </p>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+
 <form asp-controller="Services" asp-action="Index">
     <p>
         @*<select asp-for="CategoryName" asp-items="Model.CategoryList">
@@ -85,9 +93,9 @@
                     @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a> &nbsp;
-                    <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info"></i></a> &nbsp;
-                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i></a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary"><i class="fas fa-edit"></i></a> &nbsp;
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><i class="fas fa-info"></i></a> &nbsp;
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                 </td>
             </tr>
         }
