--- a/UdbService/Areas/Admin/Views/User/Index.cshtml
+++ b/UdbService/Areas/Admin/Views/User/Index.cshtml
@@ -5,13 +5,9 @@
 <div class="border backgroundWhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-info">Employees List</h2>
+            <h2 class="text-info">Users List</h2>
         </div>
-        <div class="col-6 text-right">
-            <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-info">
-                <i class="fas fa-plus"></i> &nbsp; New Employee Registeration
-            </a>
-        </div>
+        
     </div>
 
     <br />
