--- a/UdbService/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/UdbService/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -1,20 +1,23 @@
 ﻿@model int
 @{
     ViewData["Title"] = "OrderConfirmation";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
-<div class="container row">
-    <div class="col-12 text-center">
-        <h1 class="text-primary text-center">Order Request Submitted</h1><br />
-        <img src="~/images/lawn_leaf.jpg" width="50%" />
-    </div>
-    <div class="col-12 text-center" style="color:maroon">
-        <br />
-        Thank you for submitting a request online! <br />
-        We have received your request and our team will be call you shortly!
-        <br />
-        Your Request Number is : @Model
+}
+<br />
+<br />
+<div class="container p-5">
+    <div class="container row">
+        <div class="col-12 text-center">
+            <h1 class="text-primary text-center">Order Request Submitted</h1><br />
+        </div>
+        <div class="col-12 text-center" style="color:maroon">
+            <br />
+            Thank you for submitting a request! <br />
+            We have received your request and our team will be call you shortly!
+            <br />
+            <div class="box box-shadow">Your Request Number is : @Model</div>
+            
+        </div>
     </div>
 </div>
 
