--- a/UdbService/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/UdbService/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,124 +1,122 @@
 ﻿@model UdbService.Models.ViewModels.CartVM
-
-
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<form method="post">
-    @if (Model.ServiceList.Count > 0)
-    {
-        <br />
-        <div class="backgroundWhite container">
-            <div class="card">
-                <div class="card-header bg-dark text-light ml-0 row container">
-                    <div class="col-12 d-none d-md-block col-md-6 pb-1">
-                        <i class="fas fa-shopping-cart"></i> &nbsp; Order Summary
+<br />
+<br />
+<div class="container p-5">
+    <form method="post">
+        @if (Model.ServiceList.Count > 0)
+        {
+            <br />
+            <div class="backgroundWhite container">
+                <div class="card">
+                    <div class="card-header bg-dark text-light ml-0 row container">
+                        <div class="col-12 d-none d-md-block col-md-6 pb-1">
+                            <i class="fas fa-shopping-cart"></i> &nbsp; Order Summary
+                        </div>
+                        <div class="col-12 col-md-4 offset-md-2 text-right">
+                            <a asp-action="Index" asp-controller="Cart" asp-area="Customer" class="btn btn-outline-info form-control btn-sm">Back to Cart</a>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 offset-md-2 text-right">
-                        <a asp-action="Index" asp-controller="Cart" asp-area="Customer" class="btn btn-outline-info form-control btn-sm">Back to Cart</a>
+                    <div class="card-body">
+                        <div class="container rounded p-2">
+                            <div class="row">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="col-12 col-lg-6 pb-4">
+                                    <div class="row">
+                                        <h4 class="d-flex justify-content-between align-items-center mb-3">
+                                            <span class="text-primary">PickUp Details:</span>
+                                        </h4>
+                                    </div>
+                                    <input asp-for="Order.UserId" hidden />
+                                    <div class="row my-1">
+                                        <div class="col-3">
+                                            <label>Name</label>
+                                        </div>
+                                        <div class="col-9">
+                                            <input asp-for="Order.Name" id="txtName" type="text" class="form-control" />
+                                            <span asp-validation-for="Order.Name" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row my-1">
+                                        <div class="col-3">
+                                            <label>Phone</label>
+                                        </div>
+                                        <div class="col-9">
+                                            <input asp-for="Order.Phone" id="txtPhone" type="text" class="form-control" />
+                                            <span asp-validation-for="Order.Phone" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row my-1">
+                                        <div class="col-3">
+                                            <label>Address</label>
+                                        </div>
+                                        <div class="col-9">
+                                            <input asp-for="Order.Address" type="text" class="form-control" />
+                                            <span asp-validation-for="Order.Address" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row my-1">
+                                        <div class="col-3">
+                                            <label>City</label>
+                                        </div>
+                                        <div class="col-9">
+                                            <input asp-for="Order.City" type="text" class="form-control" />
+                                            <span asp-validation-for="Order.City" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="row my-1">
+                                        <div class="col-3">
+                                            <label>Email</label>
+                                        </div>
+                                        <div class="col-9">
+                                            <input asp-for="Order.Email" type="text" class="form-control" />
+                                            <span asp-validation-for="Order.Email" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-5 offset-lg-1">
+                                    <h4 class="d-flex justify-content-between align-items-center mb-3">
+                                        <span class="text-primary">Order Summary</span>
+                                    </h4>
+                                    <ul class="list-group mb-3">
+                                        @{ var total = 0.0;}
+
+                                        @foreach (var details in Model.ServiceList)
+                                        {
+                                            <li class="list-group-item d-flex justify-content-between">
+                                                <div>
+                                                    <input type="hidden" asp-for="@details.Id" />
+                                                    <h6 class="my-0">@details.Name</h6>
+
+                                                </div>
+                                                <span class="text-muted">$@(details.Price)</span>
+                                                @{ total += details.Price;}
+                                            </li>
+                                        }
+
+                                        <li class="list-group-item d-flex justify-content-between bg-light">
+                                            <small class="text-primary">Total (USD)</small>
+                                            <strong class="text-primary">$@total</strong>
+                                        </li>
+
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="card-body">
-                  <div class="container rounded p-2">
-                      <div class="row">
-                          <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                          <div class="col-12 col-lg-6 pb-4">
-                              <div class="row">
-                                  <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                      <span class="text-primary">PickUp Details:</span>
-                                  </h4>
-                              </div>
-                              <input asp-for="Order.UserId"  hidden />
-                              <div class="row my-1">
-                                  <div class="col-3">
-                                      <label>Name</label>
-                                  </div>
-                                  <div class="col-9">
-                                      <input asp-for="Order.Name" id="txtName" type="text" class="form-control" />
-                                      <span asp-validation-for="Order.Name" class="text-danger"></span>
-                                  </div>
-                              </div>
-                              <div class="row my-1">
-                                  <div class="col-3">
-                                      <label>Phone</label>
-                                  </div>
-                                  <div class="col-9">
-                                      <input asp-for="Order.Phone" id="txtPhone" type="text" class="form-control" />
-                                      <span asp-validation-for="Order.Phone" class="text-danger"></span>
-                                  </div>
-                              </div>
-                              <div class="row my-1">
-                                  <div class="col-3">
-                                      <label>Address</label>
-                                  </div>
-                                  <div class="col-9">
-                                      <input asp-for="Order.Address" type="text" class="form-control" />
-                                      <span asp-validation-for="Order.Address" class="text-danger"></span>
-                                  </div>
-                              </div>
-                              <div class="row my-1">
-                                  <div class="col-3">
-                                      <label>City</label>
-                                  </div>
-                                  <div class="col-9">
-                                      <input asp-for="Order.City" type="text" class="form-control" />
-                                      <span asp-validation-for="Order.City" class="text-danger"></span>
-                                  </div>
-                              </div>
-
-                              <div class="row my-1">
-                                  <div class="col-3">
-                                      <label>Email</label>
-                                  </div>
-                                  <div class="col-9">
-                                      <input asp-for="Order.Email" type="text" class="form-control" />
-                                      <span asp-validation-for="Order.Email" class="text-danger"></span>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-12 col-lg-5 offset-lg-1">
-                              <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                  <span class="text-primary">Order Summary</span>
-                              </h4>
-                              <ul class="list-group mb-3">
-                                  @{ var total = 0.0;}
-
-                                  @foreach (var details in Model.ServiceList)
-                                  {
-                                      <li class="list-group-item d-flex justify-content-between">
-                                          <div>
-                                              <input type="hidden" asp-for="@details.Id" />
-                                              <h6 class="my-0">@details.Name</h6>
-                                             
-                                          </div>
-                                          <span class="text-muted">$@(details.Price)</span>
-                                          @{ total += details.Price;}
-                                      </li>
-                                  }
-
-                                  <li class="list-group-item d-flex justify-content-between bg-light">
-                                      <small class="text-primary">Total (USD)</small>
-                                      <strong class="text-primary">$@total</strong>
-                                  </li>
-
-                              </ul>
-                              
-                          </div>
-                      </div>
-                  </div>
-                </div>
-                <div class="card-footer">
-                    <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 text-right">
-                        <button type="submit" class="btn btn-success form-control">Place Order</button>                        
+                    <div class="card-footer">
+                        <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 text-right">
+                            <button type="submit" class="btn btn-success">Place Order</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    }
-    else
-    {
-        <div class="backgroundWhite"> No items added to the shopping cart...</div>
-    }
-</form>
+        }
+        else
+        {
+            <div class="backgroundWhite"> No items added to the shopping cart...</div>
+        }
+    </form>
 
+</div>
